# wasm-vite-example

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/: index.html  index.ts
src/: lib.rs
