[package]
name = "wasm-example"
description="wasm example with easy access"
repository = "https://github.com/marpme/wasm-example"
license = "Apache-2.0"
version = "0.1.0"
authors = ["marpme <7430964+marpme@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "console", "Document", "Element", "HtmlBodyElement"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
cargo-watch = "8.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
